<resources>
    <string name="app_name">mobileapp</string>
    <string name="title_home">Home</string>
    <string name="title_recipes">Recipes</string>
    <string name="title_meals">Meals and kcal</string>
    <string name="title_shopping">Shopping Cart</string>
    <string name="shopping_delete_button">Delete done</string>
    <string name="shopping_complete_button">Complete all</string>
    <string name="delete_button_desc">Delete</string>
    <string name="starred_item_recipe_list">Starred</string>
    <string name="picture_item_recipe_list">Recipe image</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="title_upload">Upload Recipe</string>
    <string name="title_recipe_details">Recipe Details</string>
    <string name="home_heading">Recipe of the day</string>
    <string name="recipe_detail_title">Recipe Title</string>
    <string name="recipe_details_ingredients">Ingredients:</string>
    <string name="recipe_details_instructions">Instructions:</string>
</resources>