<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mobileapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_recipes_to_recipeDetailFragment"
            app:destination="@id/recipeDetailFragment" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_shopping"
            app:destination="@id/navigation_shopping" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_recipes"
            app:destination="@id/navigation_recipes" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_upload"
            app:destination="@id/navigation_upload" />
    </fragment>

    <fragment
        android:id="@+id/navigation_recipes"
        android:name="com.example.mobileapp.ui.recipes.RecipesFragment"
        android:label="@string/title_recipes"
        tools:layout="@layout/fragment_recipes" >
        <action
            android:id="@+id/action_navigation_recipes_to_recipeDetailFragment"
            app:destination="@id/recipeDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_upload"
        android:name="com.example.mobileapp.ui.upload.UploadFragment"
        android:label="@string/title_upload"
        tools:layout="@layout/fragment_upload" />

    <fragment
        android:id="@+id/navigation_shopping"
        android:name="com.example.mobileapp.ui.shopping.ShoppingFragment"
        android:label="@string/title_shopping"
        tools:layout="@layout/fragment_shopping" />
    <fragment
        android:id="@+id/recipeDetailFragment"
        android:name="com.example.mobileapp.ui.recipes.RecipeDetailFragment"
        android:label="@string/title_recipe_details">
        <argument
            android:name="arg_recipe_detail"
            app:argType="com.example.mobileapp.dto.RecipeDto" />
    </fragment>

</navigation>